# exercise-1

./: .gitignore  .pre-commit-config.yaml  README.md  local.env  makefile  pyproject.toml
exercise/: pytest.ini
exercise/books/: client.py  exceptions.py  models.py  serializers.py  urls.py  views.py
exercise/books/migrations/: 0001_create_review_table.py
exercise/exercise/: settings.py  urls.py
exercise/tests/books/: conftest.py  factories.py  test_api.py  test_client.py
